--- a/add.html
+++ b/add.html
@@ -9,6 +9,7 @@
 
 <body>
     <div>新增加的页面</div>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam, recusandae debitis. Modi quis enim minima, obcaecati voluptate quidem hic esse veritatis aliquam itaque, consectetur sed totam qui sit non dolore?</p>
 </body>
 
 </html>
